Fixed editor content overflow

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
 
 #editor {
     display: flex;
-    width: 950px;
     flex-direction: column;
     min-height: 100vh;
     background-color: #262626;
